# aonsoku

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  LICENSE.txt  README.md  biome.json  components.json  cypress.config.ts  dev-app-update.yml  docker-compose.local.yml  docker-compose.yml  docker-entrypoint.sh  electron-builder.yml  electron.manual-chunks.ts  electron.vite.config.ts  env-config.js.template  flake.nix  index.html  nginx.conf.template  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  set-variables.sh  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: publish-docker.yml  release.yml
.husky/: pre-commit
.zed/: settings.json
cypress/support/: commands.ts  component-index.html  component.tsx  cypress.d.ts
electron/: env.d.ts
electron/main/: app.ts  events.ts  icon.ts  index.ts  taskbar.ts  tray.ts  window.ts
electron/preload/: api.types.ts  index.ts  types.ts
flatpak/: io.github.victoralvesf.aonsoku.metainfo.xml
native/: avplayer-helper.swift
public/: env-config.js
public/favicons/: site.webmanifest
resources/icons/: icon.icns
src/: App.tsx  fonts.css  index.css  main.tsx  manual-chunks.ts  styles.css  themes.css  tw-fix-linux.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: commands.rs  main.rs  menu.rs  playerstatus.rs  progress.rs  system_tray.rs  tlpos.rs  utils.rs
src-tauri/src/discord/: rpc.rs
src-tauri/src/mac/: window.rs
src-tauri/src/proxy/: proxy.rs
src/api/: artworkClient.ts  httpClient.ts  navidromeClient.ts  pingServer.ts  podcastClient.ts  queryServerInfo.ts  queryServerVersion.ts
src/cache/: clearAll.ts  image.ts
src/contexts/: app-context.tsx
src/hooks/: use-raf-active-cue.ts  use-word-seek.ts
src/i18n/: index.ts  languages.ts
src/lib/: queryClient.ts  utils.ts
src/pages/: recently-added-albums.tsx
src/queries/: albums.ts  lovedsongs.ts  podcasts.ts  songs.ts
src/routes/: loginLoader.ts  protectedLoader.ts  router.tsx  routesList.ts
src/service/: albums.ts  artists.ts  genres.ts  getPlaylists.ts  library.ts  lovedsongs.ts  lyrics.ts  ping.ts  playlists.ts  podcasts.ts  radios.ts  rating.ts  rpc.ts  scrobble.ts  search.ts  songs.ts  star.ts  subsonic.ts
src/shortcuts/: index.ts  playback.ts
src/store/: activity-store.ts  app.store.ts  idb.ts  lang.store.ts  player.store.ts  playlists.store.ts  radios.store.ts  theme.store.ts  ui.store.ts
src/types/: activity.ts  columnFilter.ts  coverArtType.ts  electron.d.ts  index.d.ts  langContext.ts  pictureInPicture.d.ts  playerContext.ts  playlistsContext.ts  radiosContext.ts  serverConfig.ts  shortcuts.ts  themeContext.ts  uiContext.ts
src/utils/: activity.ts  alac.ts  album.ts  albumsFilter.ts  albumsPageFilterValues.ts  appName.ts  audioInfo.ts  browser.ts  byteLength.ts  byteSlice.ts  compareSongLists.ts  convertSecondsToTime.ts  dataTable.ts  dateTime.ts  desktop.ts  discordRpc.ts  formatBytes.ts  getAverageColor.ts  getTextSizeClass.ts  gridTools.ts  (+30 more)
(+533 files in other folders)
