[package]
name = "aonsoku"
version = "0.8.3"
description = "A modern desktop client for Navidrome/Subsonic servers."
authors = ["Victor Alves"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
regex = "1.10.5"
tauri-plugin-os = "2"
dirs = "5.0.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2.0.1"
tauri-plugin-shell = "2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25.0"
objc = "0.2.7"
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
